posiGen_FullsendBox/src/objects/Energy_Audit__c.object
<CustomObject>
    <fields>
        <fullName>DSS3_Is_duct_sealing_needed__c</fullName>
        <label>DSS3 Duct sealing Performed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSS3_Notes__c</fullName>
        <label>DSS3 Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Air_Handler_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Air Handler(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Ducts_at_Junctions_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Ducts at Junctions(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Ducts_at_Plenum_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Ducts at Plenum(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Platform_Mech_Closet_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Platform - Mech. Closet(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Plenum_Return_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Plenum  (Return)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Seal_Plenum_Supply_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Seal Plenum (Supply)(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Sealing_Return_Chase_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Sealing Return Chase(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_Strapping_Ducts_QTY__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DSS3 Strapping Ducts(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSS3_points__c</fullName>
        <formula>IF(ISPICKVAL(DSS3_Is_duct_sealing_needed__c , &quot;Yes&quot;),325,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSS3 Duct sealing Performed?(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DryerVentInstall_Points__c</fullName>
        <formula>56.179  *  DryerVentInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dryer Vent - Install(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DryerVentInstall_QTY__c</fullName>
        <label>Dryer Vent - Install(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_Sealing_System1_kWh_savings__c</fullName>
        <formula>CASE(TEXT(HVAC_S1_Heating_Type__c),
&quot;Central /gas&quot;,4.48,
&quot;Central/elect resist&quot;,16.92,
&quot;Central/Heat Pump&quot;,9.99,
&quot;Electric Space&quot;,0,
&quot;Gas space&quot;,0,
&quot;Room AC W/elec heat&quot;,0,
0)

* System1_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct Sealing System 1 kWh savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_Sealing_System2_kWh_savings__c</fullName>
        <formula>CASE(TEXT(HVAC_S2_Heating_Type__c), 
&quot;Central /gas&quot;,4.48, 
&quot;Central/elect resist&quot;,16.92, 
&quot;Central/Heat Pump&quot;,9.99, 
&quot;Electric Space&quot;,0, 
&quot;Gas space&quot;,0, 
&quot;Room AC W/elec heat&quot;,0, 
0)

* System2_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct Sealing System 2 kWh savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_Sealing_System3_kWh_savings__c</fullName>
        <formula>CASE(TEXT(HVAC_S3_Heating_Type__c), 
&quot;Central /gas&quot;,4.48, 
&quot;Central/elect resist&quot;,16.92, 
&quot;Central/Heat Pump&quot;,9.99, 
&quot;Electric Space&quot;,0, 
&quot;Gas space&quot;,0, 
&quot;Room AC W/elec heat&quot;,0, 
0)

* System3_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct Sealing System 3 kWh savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_Sealing_Therms_Savings_Total__c</fullName>
        <formula>Duct_sealing_Therms_S1_CFM_redu__c + Duct_sealing_Therms_S2_per_CFM_redu__c + Duct_sealing_Therms_S3_per_CFM_redu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct Sealing Therms Savings Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_Sealing_kWh_Savings_Total__c</fullName>
        <formula>Duct_Sealing_System1_kWh_savings__c  +  Duct_Sealing_System2_kWh_savings__c  +  Duct_Sealing_System3_kWh_savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct Sealing kWh Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_sealing_Therms_S1_CFM_redu__c</fullName>
        <formula>CASE(TEXT(HVAC_S1_Heating_Type__c) , 
&quot;Central /gas&quot;,0.71,
&quot;Central/elect resist&quot;,0,
&quot;Central/heat pump&quot;,0,
&quot;Electric space&quot;,0,
&quot;Gas space&quot;,0,
&quot;Room AC W/elec heat&quot;,0,
0)

*System1_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct sealing Therms savings per CFM redu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_sealing_Therms_S2_per_CFM_redu__c</fullName>
        <formula>CASE(TEXT(HVAC_S2_Heating_Type__c) , 
&quot;Central /gas&quot;,0.71,
&quot;Central/elect resist&quot;,0,
&quot;Central/heat pump&quot;,0,
&quot;Electric space&quot;,0,
&quot;Gas space&quot;,0,
&quot;Room AC W/elec heat&quot;,0,
0)

*System2_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct sealing Therms savings per CFM redu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duct_sealing_Therms_S3_per_CFM_redu__c</fullName>
        <formula>CASE(TEXT(HVAC_S3_Heating_Type__c) , 
&quot;Central /gas&quot;,0.71,
&quot;Central/elect resist&quot;,0,
&quot;Central/heat pump&quot;,0,
&quot;Electric space&quot;,0,
&quot;Gas space&quot;,0,
&quot;Room AC W/elec heat&quot;,0,
0)

*System3_CFM_Reduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duct sealing Therms savings per CFM redu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Auditor__c</fullName>
        <label>EE Auditor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_New_Contract_Marker_Num__c</fullName>
        <formula>Project__r.Opportunity__r.EE_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE New Contract Marker Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESHeatCoolWindowUnit_KWh_Savings__c</fullName>
        <formula>211*ESHeatCoolWindowUnit_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Heat/Cool Window Unit KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESHeatCoolWindowUnit_Points__c</fullName>
        <formula>804.0048  *  ESHeatCoolWindowUnit_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Heat/Cool Window Unit(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESHeatCoolWindowUnit_QTY__c</fullName>
        <label>ES Heat/Cool Window Unit(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESWindowUnitCoolAir_KWh_Savings__c</fullName>
        <formula>211*ESWindowUnitCoolAir_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Window Unit Cool Air KWh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESWindowUnitCoolAir_Points__c</fullName>
        <formula>433  *  ESWindowUnitCoolAir_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ES Window Unit- Cool Air(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESWindowUnitCoolAir_QTY__c</fullName>
        <label>ES Window Unit- Cool Air(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Reduction_Savings_kWh_Mirror__c</fullName>
        <label>Electric Reduction Savings kWh Mirror</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electric_Reduction_Savings_kWh__c</fullName>
        <formula>(Air_Sealing_kWh_Savings__c  +  Duct_Sealing_kWh_Savings_Total__c   + insulation_kWh_savings__c+ Thermostat_KWh_Savings_Total__c  +  Light_Bulb_KWh_Savings_Total__c  +  Smart_Power_Strip_kWh_Savings__c  +  Window_Units_kWh_Savings_Total__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electric Reduction Savings kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Solar_Production__c</fullName>
        <label>Estimated Solar Production</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_total_annual_kWh_savings__c</fullName>
        <formula>Estimated_Solar_Production__c  +  Electric_Reduction_Savings_kWh_Mirror__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated total annual kWh savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exterior_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>Exterior Type</label>
        <picklist>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinyl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foam Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FaucetAerator_Points__c</fullName>
        <formula>4.175  *  FaucetAerator_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faucet Aerator(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FaucetAerator_QTY__c</fullName>
        <label>Faucet Aerator(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiberglassBattInsulationSF_Points__c</fullName>
        <formula>1.05  *  FiberglassBattInsulationSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiberglass Batt Insulation SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiberglassBattInsulationSF_QTY__c</fullName>
        <label>Fiberglass Batt Insulation SF(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Foundation_Type__c</fullName>
        <label>Foundation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Slab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gas_ReductionThermsEquivalent__c</fullName>
        <formula>(Air_sealing_Therms_Savings__c  +  Duct_Sealing_Therms_Savings_Total__c  +  Insulation_Therms_Savings__c )  * 29.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Therms Reduction kWh Equivalent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Reduction_Mirror__c</fullName>
        <label>Gas Reduction Mirror</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Therms_Reduction__c</fullName>
        <formula>Air_sealing_Therms_Savings__c + Duct_Sealing_Therms_Savings_Total__c + Insulation_Therms_Savings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gas Therms Reduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Observations__c</fullName>
        <description>This is a picklist field.</description>
        <label>General Observations</label>
        <picklist>
            <picklistValues>
                <fullName>Holes in walls/ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All/most lights left on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple appliances left on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doors/window open while HVAC system is running</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HS1Mr__c</fullName>
        <label>HeatSytem1 mirror</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 1 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 1 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Cooling System 1 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_SEER__c</fullName>
        <label>Cooling System 1 SEER</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_Tons__c</fullName>
        <label>Cooling System 1 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Cooling_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 1 Cooling Type</label>
        <picklist>
            <picklistValues>
                <fullName>RAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Heating_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 1 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Heating_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 1 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Heating_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Heating System 1 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Heating_Tons__c</fullName>
        <label>Heating System 1 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S1_Heating_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 1 Heating Type</label>
        <picklist>
            <picklistValues>
                <fullName>Central /gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/elect resist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/heat pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 2 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 2 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Cooling System 2 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_SEER__c</fullName>
        <label>Cooling System 2 SEER</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_Tons__c</fullName>
        <label>Cooling System 2 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Cooling_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 2 Cooling Type</label>
        <picklist>
            <picklistValues>
                <fullName>RAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Heating_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 2 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Heating_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 2 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Heating_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Heating System 2 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Heating_Tons__c</fullName>
        <label>Heating System 2 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S2_Heating_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 2 Heating Type</label>
        <picklist>
            <picklistValues>
                <fullName>Central /gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/elect resist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/heat pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 3 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Cooling System 3 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Cooling System 3 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_SEER__c</fullName>
        <label>Cooling System 3 SEER</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_Tons__c</fullName>
        <label>Cooling System 3 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Cooling_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 3 Cooling Type</label>
        <picklist>
            <picklistValues>
                <fullName>RAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Heating_Age__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 3 Age</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Heating_Estimated_Efficiency__c</fullName>
        <description>This is a picklist field.</description>
        <label>Heating System 3 Estimated Efficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Heating_Model__c</fullName>
        <description>This is a text field.</description>
        <label>Heating System 3 Model</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Heating_Tons__c</fullName>
        <label>Heating System 3 Tons</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HVAC_S3_Heating_Type__c</fullName>
        <description>This is a picklist field.</description>
        <label>System 3 Heating Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central /gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/elect resist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central/heat pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Room AC w/Elec Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hacktime__c</fullName>
        <label>Hacktime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HighLowPipeInstall_Points__c</fullName>
        <formula>68.002  *  HighLowPipeInstall_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Low Pipe Install(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HighLowPipeInstall_QTY__c</fullName>
        <label>High Low Pipe Install(QTY)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>House_Age__c</fullName>
        <defaultValue>0</defaultValue>
        <label>House Age</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>House_SF__c</fullName>
        <defaultValue>0</defaultValue>
        <label>House S.F.</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsulationSFTotal__c</fullName>
        <formula>FiberglassBattInsulationSF_QTY__c  +  Cellulose_HeatPumpHeatSF_QTY__c  +  Cellulose_GasHeatSF_QTY__c  +  Cellulose_ElectricHeatSF_QTY__c  +  Cellulose_NoRebateSf_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insulation S.F. Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_Therms_Savings__c</fullName>
        <formula>InsulationSFTotal__c *  Insulation_Therms_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insulation Therms Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_Therms_Value__c</fullName>
        <description>Automatically Populated Via Workflow</description>
        <inlineHelpText>Automatically Populated</inlineHelpText>
        <label>Insulation Therms Value</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_kWh_Table_Result__c</fullName>
        <description>Populated from a Process Builder Process</description>
        <inlineHelpText>Automatically calculated</inlineHelpText>
        <label>Insulation kWh Table Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KneewallFiberglassSF_Points__c</fullName>
        <formula>2.7  *  KneewallFiberglassSF_QTY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knee wall: Fiberglass SF(Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>